Fixed span on small button

--- a/scss/landing-page.scss
+++ b/scss/landing-page.scss
@@ -197,6 +197,13 @@ h2.subheader {
 		color: white;
 		-webkit-transition: background-color 300ms ease-out;
 		transition: background-color 300ms ease-out;
+
+		.span {
+			font-family: "tablet-gothic", Helvetica, Arial, sans-serif !important;
+margin-right: 1em;
+font-weight: bold;
+text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+		}
 	}
 
 	.small.fa-arrow-circle-o-right::before {
